# saamm-discrete-stochastic-queuing-system

./: CMakeLists.txt  README.md  inheritance.drawio
DiscreteStohasticQueuingSystemAnalyzer/: CMakeLists.txt  main.cpp  model_parameters_parser.cpp  model_parameters_parser.h
QueuingSystemLib/: CMakeLists.txt  bouncing_jobs_producer_base.cpp  bouncing_jobs_producer_base.h  final_jobs_server.cpp  final_jobs_server.h  fixed_time_bouncing_jobs_producer.cpp  fixed_time_bouncing_jobs_producer.h  fixed_time_jobs_producer_base.cpp  fixed_time_jobs_producer_base.h  job.cpp  job.h  jobs_producer_base.cpp  jobs_producer_base.h  jobs_queue.cpp  jobs_queue.h  jobs_server_base.cpp  jobs_server_base.h  jobs_storage.cpp  jobs_storage.h  queuing_node_base.cpp  queuing_node_base.h  queuing_receiver_base.cpp  queuing_receiver_base.h  tickable.cpp  tickable.h
